# GPGPU2

project_irgpua/: CMakeLists.txt  rapport.nsys-rep
project_irgpua/src/: fix_gpu.cu  fix_gpu.cuh  fix_gpu_industrial.cu  fix_gpu_industrial.cuh  main.cu  main_gpu.cu  main_gpu_industrial.cu
